Bug 14843 - WARNING: at mm/page_alloc.c at ext4 root mount
Summary: WARNING: at mm/page_alloc.c at ext4 root mount
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Page Allocator (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-19 16:12 UTC by Christian Casteyde
Modified: 2010-01-06 21:15 UTC (History)
0 users

See Also:
Kernel Version: 2.6.33-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Christian Casteyde 2009-12-19 16:12:51 UTC
Kernel 2.6.33-rc1 64bits with kmemcheck and other debug options
Athlon64 3GHz single core
Acer Aspire 1511LMi
Bluewhite 64 13 (32 bits port of Slackware)

Since 2.6.33-rc1, I get the following warning at boot when the root ext4 filesystem is mounted:
kmemleak: Automatic memory scanning thread started
EXT3-fs (hda2): error: couldn't mount because of unsupported optional features (240)
EXT2-fs (hda2): error: couldn't mount because of unsupported optional features (240)
------------[ cut here ]------------
WARNING: at mm/page_alloc.c:1220 get_page_from_freelist+0x6a4/0x6c0()
Hardware name: Aspire 1510
Modules linked in:
Pid: 1, comm: swapper Not tainted 2.6.33-rc1 #3
Call Trace:
 [<ffffffff81083974>] ? get_page_from_freelist+0x6a4/0x6c0
 [<ffffffff810352c8>] warn_slowpath_common+0x78/0xd0
 [<ffffffff8103532f>] warn_slowpath_null+0xf/0x20
 [<ffffffff81083974>] get_page_from_freelist+0x6a4/0x6c0
 [<ffffffff81083ad8>] __alloc_pages_nodemask+0x148/0x700
 [<ffffffff81083ad8>] ? __alloc_pages_nodemask+0x148/0x700
 [<ffffffff810ad873>] kmemcheck_alloc_shadow+0x23/0xb0
 [<ffffffff810abb3d>] __slab_alloc+0x62d/0x790
 [<ffffffff8116d24a>] ? journal_init_common+0x1a/0x180
 [<ffffffff810abea4>] kmem_cache_alloc+0x144/0x150
 [<ffffffff8116d24a>] ? journal_init_common+0x1a/0x180
 [<ffffffff8116d24a>] journal_init_common+0x1a/0x180
 [<ffffffff8116d935>] jbd2_journal_init_inode+0x15/0x1b0
 [<ffffffff81144c39>] ext4_fill_super+0x18b9/0x2330
 [<ffffffff81020abc>] ? do_page_fault+0x26c/0x340
 [<ffffffff810b5187>] get_sb_bdev+0x177/0x1e0
 [<ffffffff81143380>] ? ext4_fill_super+0x0/0x2330
 [<ffffffff81141333>] ext4_get_sb+0x13/0x20
 [<ffffffff810b3d57>] vfs_kern_mount+0x57/0xf0
 [<ffffffff810b3e5e>] do_kern_mount+0x4e/0x110
 [<ffffffff810cddd9>] do_mount+0x259/0x850
 [<ffffffff810ce483>] sys_mount+0xb3/0xe0
 [<ffffffff81a9fec1>] mount_block_root+0xf9/0x2b9
 [<ffffffff81aa00d7>] mount_root+0x56/0x5d
 [<ffffffff81aa01bf>] prepare_namespace+0xe1/0x154
 [<ffffffff81a9f5f8>] kernel_init+0x11b/0x136
 [<ffffffff815869c7>] ? trace_hardirqs_on_thunk+0x3a/0x3f
 [<ffffffff81003074>] kernel_thread_helper+0x4/0x10
 [<ffffffff8158797e>] ? restore_args+0x0/0x30
 [<ffffffff81a9f4dd>] ? kernel_init+0x0/0x136
 [<ffffffff81003070>] ? kernel_thread_helper+0x0/0x10
---[ end trace 0634a8eb523fe71e ]---
EXT4-fs (hda2): mounted filesystem with ordered data mode
VFS: Mounted root (ext4 filesystem) readonly on device 3:2.

This didn't occurs with 2.6.32.
Comment 1 Christian Casteyde 2010-01-06 21:15:33 UTC
Fixed in 2.6.33-rc3.

Note You need to log in before you can comment on or make changes to this bug.